# lsp-recorder

./: LICENSE  README.md  flake.nix  fourmolu.yaml  hls-config.json.example  justfile  lsp-recorder.cabal
app/: Main.hs
bench/: aggregate-reports.py  plot-charts.py  run-benchmarks.sh
src/LspRecorder/: Cli.hs  Config.hs  Env.hs  Proxy.hs  Record.hs  Replay.hs  Server.hs  Snapshot.hs
src/LspRecorder/Lsp/: Framing.hs  Types.hs
src/LspRecorder/Replay/: FileSync.hs  Report.hs  Timing.hs
test/: ConfigSpec.hs  FileSyncSpec.hs  FramingSpec.hs  Main.hs  RecordSpec.hs  ReplaySpec.hs  SnapshotSpec.hs  TypesSpec.hs
