cabal-version:   3.8
name:            lsp-recorder
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Curtis Chin Jen Sem
maintainer:      csochinjensem@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md
synopsis:
  Transparent LSP stdio proxy that records and replays editor↔server communication

description:
  lsp-recorder sits between an editor and a language server, recording all
  bidirectional LSP messages to JSONL trace files. Traces can be replayed
  against a fresh server to benchmark performance.

common shared
  default-language:   GHC2024
  default-extensions: OverloadedStrings
  ghc-options:        -Wall -Werror

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    LspRecorder.Cli
    LspRecorder.Config
    LspRecorder.Env
    LspRecorder.Lsp.Framing
    LspRecorder.Lsp.Types
    LspRecorder.Proxy
    LspRecorder.Record
    LspRecorder.Replay
    LspRecorder.Replay.Report
    LspRecorder.Replay.Timing
    LspRecorder.Server
    LspRecorder.Snapshot

  build-depends:
    , aeson
    , async
    , attoparsec
    , base
    , bytestring
    , containers
    , directory
    , filepattern
    , filepath
    , optparse-applicative
    , process
    , stm
    , tar
    , text
    , time
    , unix
    , zstd

executable lsp-recorder
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , base
    , lsp-recorder

test-suite lsp-recorder-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    ConfigSpec
    FramingSpec
    RecordSpec
    ReplaySpec
    SnapshotSpec
    TypesSpec

  hs-source-dirs: test
  build-depends:
    , aeson
    , attoparsec
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , hspec
    , lsp-recorder
    , process
    , QuickCheck
    , text
    , time
